--- a/http-server.cabal
+++ b/http-server.cabal
@@ -31,6 +31,7 @@ library
     UndecidableInstances
 
   build-depends:
+    async,
     HTTP        >= 4000.2.0 && < 5000,
     base        >= 4        && < 5,
     mime        >= 0.3      && < 2,
